# pds-quillan

./: .gitignore  2023_NJSLS_ELA.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  run_tests.ps1
.github/workflows/: ci.yml
docs/: assignment_contract.md  assignment_reporting_contract.md  cli_contract.md  cli_contract_inventory.json  comment_bank_contract.md  data_contracts.md  development_plan.md  feedback_export_contract.md  focus_standard_comment_contract.md  module_profile_and_dispatch.md  module_qualified_record_services.md  nj_ela_starter_materials.md  pds2_scan_intake.md  physical_acceptance_v0.8.9.md  prepared_review_workflow.md  printable_response_template.md  release_checklist.md  release_process.md  response_page_observations.md  review_dashboard_contract.md  review_record_contract.md  review_status_contract.md  rubric_contract.md  scan_routing_design.md  standards_based_review_redesign.md  starter_materials.md  tag_bank_contract.md  teacher_review_model.md  workspace_lifecycle.md
docs/adr/: 0001-standards-based-review-model.md
docs/releases/: v0.8.9.md  v0.8.9_acceptance_matrix.md
examples/assignments/: villainy_final_essay_synthetic.json
examples/comment_banks/: creative_writing.json  ela10_argument_writing.json  ela10_informational_writing.json  (+15 more)
quillan/: __init__.py  _path_safety.py  _version.py  assignment_discovery.py  assignment_picker.py  assignment_setup.py  assignment_submission_assembly.py  assignment_summary_context.py  assignment_workflows.py  assignments.py  atomic_record_io.py  authoring_prompt_helpers.py  class_summary_export.py  cli.py  comment_bank_workflows.py  comment_bank_writing.py  comment_banks.py  comment_management.py  evidence_filing.py  evidence_opening.py  feedback_export.py  feedback_management.py  focus_standard_comments.py  generated_output_opening.py  intake_assembly.py  menu.py  menu_navigation.py  minimum_requirement_review.py  module_errors.py  observation_management.py  payload_validation.py  payloads.py  pdf_pages.py  pds2_scan_intake.py  pds_contract.py  pds_module.py  plain_paper_submission.py  post_dispatch_review.py  post_dispatch_review_resolution.py  printable_response.py  (+68 more)
scripts/: check_documentation.py  generate_cli_contract_inventory.py  generate_review_artifacts.py  inspect_release_artifacts.py  persist_release_artifacts.py  run_installed_acceptance.py  run_visual_acceptance.py  validate_development_install.ps1  validate_release_candidate.ps1  verify_core_wheel.py
tests/: __init__.py  menu_screen_recorder.py  observation_test_support.py  pds1_scan_test_support.py  review_test_support.py  test_assignment_picker.py  test_assignment_standards_selection.py  test_assignment_submission_assembly.py  test_assignment_workflows.py  test_assignments.py  test_atomic_record_io.py  test_class_summary_export.py  test_cli.py  test_cli_assignments.py  test_cli_class_summary_export.py  test_cli_comments.py  test_cli_contract_docs.py  test_cli_decode_scan.py  test_cli_feedback.py  test_cli_feedback_export.py  test_cli_observations.py  test_cli_open_evidence.py  test_cli_pages.py  test_cli_printable_responses.py  test_cli_ratings.py  test_cli_requirements.py  test_cli_review_comments.py  test_cli_review_dashboard.py  test_cli_review_lifecycle_smoke.py  test_cli_review_scores.py  test_cli_review_status.py  test_cli_review_tags.py  test_cli_review_units.py  test_cli_review_workflow.py  test_cli_rosters.py  test_cli_route_scan.py  test_cli_route_scan_folder.py  test_cli_route_scan_pdf.py  test_cli_route_scan_qr.py  test_cli_scan_review_resolution.py  (+108 more)
(+86 files in other folders)
