[project]
name = "quillan"
version = "0.1.0"
description = "A local-first standards-based writing evidence capture system for teachers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stephen Severino" }
]
dependencies = [
    "qrcode[pil]",
    "reportlab",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pypdf",
    "ruff",
    "mypy",
    "types-qrcode",
    "types-reportlab",
]

[project.scripts]
quillan = "quillan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
mypy_path = "../pds-core"
