[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quillan"
version = "0.1.0"
description = "A local-first standards-based writing evidence capture system for teachers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stephen Severino" }
]
dependencies = [
    "numpy<2.5",
    "opencv-python",
    "pds-core>=0.5,<0.6",
    "pdf2image",
    "qrcode[pil]",
    "reportlab",
]

[project.optional-dependencies]
dev = [
    "packaging",
    "pytest",
    "pypdf",
    "ruff",
    "mypy",
    "types-qrcode",
    "types-reportlab",
]

[project.scripts]
quillan = "quillan.cli:main"

[project.entry-points."paper_data_suite.modules"]
quillan = "quillan.pds_module:get_module_profile"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# Core 0.5 ships inspectable source but no py.typed marker.
module = ["pds_core", "pds_core.*"]
follow_untyped_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["quillan*"]
namespaces = true
